commit - changes in Pages warning -Jerin

--- a/login.html
+++ b/login.html
@@ -19,17 +19,21 @@ form {
 		<table>
 			<tbody>
 				<tr align="center">
-					<td style="color: white" colspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Flipkart 2.o</td>
+					<td style="color: white" colspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Flipkart
+						2.o</td>
 					<td></td>
 				</tr>
 				<tr>
-				<td></td>
+					<td></td>
 				</tr>
 				<tr>
 					<td style="color: white">Phone no :</td>
 					<td><input type="number" name="phone" required></td>
 				</tr>
-					<td>&nbsp</td>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+
 				<tr>
 					<td style="color: white">Password :</td>
 					<td><input type="password" name="password" required></td>
@@ -41,7 +45,7 @@ form {
 					</td>
 				</tr>
 				<tr>
-					<td>&nbsp</td>
+					<td>&nbsp;</td>
 				</tr>
 				<tr>
 					<td></td>
