--- a/register.html
+++ b/register.html
@@ -15,11 +15,13 @@ form {
 }
 </style>
 <body bgcolor="grey">
-	<form method="post" >
+	<form method="post">
 		<table>
 			<tbody>
 				<tr align="center">
-					<td style="color: white" colspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4>Register</h4></td>
+					<td style="color: white" colspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<h4>Register</h4>
+					</td>
 					<td></td>
 				</tr>
 				<tr align="left">
@@ -30,33 +32,41 @@ form {
 					<td style="color: white">User Name :</td>
 					<td><input type="text" name="name" required></td>
 				</tr>
-				<td>&nbsp</td>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
 				<tr align="left">
 					<td style="color: white">Email Id :</td>
 					<td><input type="email" name="email" required></td>
 				</tr>
-				<td>&nbsp</td>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
 				<tr align="left">
 					<td style="color: white">Password :</td>
 					<td><input type="password" name="password" required></td>
 				</tr>
-				<td>&nbsp</td>
+				<tr>
+					<td>&nbsp;</td>
+				<tr>
 				<tr align="left">
 					<td style="color: white">Phone no :</td>
 					<td><input type="number" name="phone" required></td>
 				</tr>
-				<td>&nbsp</td>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
 				<tr align="left">
 					<td style="color: white">DOB :</td>
 					<td><input type="date" name="dateOfBirth" required></td>
 				</tr>
 				<tr>
-					<td>&nbsp</td>
+					<td>&nbsp;</td>
 				</tr>
 				<tr>
 					<td></td>
-					<td><button type="submit" style="width: 100px">Sign Up</button>
-						<br></td>
+					<td><button type="submit" style="width: 100px">Sign
+							Up</button> <br></td>
 				</tr>
 
 			</tbody>
