commit - Registration servelet and pages location changed -Jerin

--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -15,7 +15,7 @@ form {
 }
 </style>
 <body bgcolor="grey">
-	<form method="post">
+	<form method="post" action="AddRegisterationServlet">
 		<table>
 			<tbody>
 				<tr align="center">
@@ -30,7 +30,7 @@ form {
 				</tr>
 				<tr align="left">
 					<td style="color: white">User Name :</td>
-					<td><input type="text" name="name" required></td>
+					<td><input type="text" name="username" required></td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
