commit -Change Password Page -Hari

--- a/WebContent/changepassword.html
+++ b/WebContent/changepassword.html
@@ -6,72 +6,67 @@
 </head>
 <style>
 body {
-	text-align: center;
+	background: url("Shopping-Background.jpg") ;
+	background-repeat: no-repeat center;
 	padding-top: 230px;
+	text-align: center;
 }
 
 form {
 	display: inline-block;
 }
 </style>
-<body bgcolor="grey">
-	Change Password
-	<div align="center">
-		<table>
+<body style="color:white ;font-family:Times New Roman;font-size:19px">
+	<form method="post" action="UpdateRegistrationServlet">
+		Change Password
+		<div align="center">
 
-			<tr align="center">
-				<td style="color: white">UserName</td>
-				<td><input type="text" name="name"></td>
-			</tr>
-			<tr></tr>
-			<tr></tr>
-			<tr></tr>
-			<tr></tr>
-			<tr></tr>
+			<table>
 
-
-			<tr align="center">
-				<td style="color: white"></td>
-				<td></td>
-			</tr>
-			<tr></tr>
-
-			<tr align="center">
-				<td style="color: white">Old Password</td>
-				<td><input type="password" name="password"></td>
-			<tr></tr>
-			<tr></tr>
-			<tr></tr>
-
-			<tr></tr>
-			<tr></tr>
+				<tr>
+					<td align="left">Phone No</td>
+					<td><input type="text" name="phone"></td>
+				</tr>
+				<tr></tr>
+				<tr></tr>
+				<tr></tr>
+				<tr></tr>
+				<tr></tr>
 
 
-			<tr align="center">
-				<td style="color: white"></td>
-				<td></td>
-			</tr>
-			<tr align="center">
-				<td style="color: white">New Password</td>
 
-				<td><input type="password" name="password"></td>
-			<tr>
-				<td>&nbsp;</td>
-			</tr>
+				<tr></tr>
 
-			<tr>
-				<td></td>
-			</tr>
-			<tr></tr>
-			<tr></tr>
+				<tr>
+					<td align="left">Old Password</td>
+					<td><input type="password" name="oldpassword"></td>
+				<tr></tr>
+				<tr></tr>
+				<tr></tr>
 
-			<tr align="center">
-				<td></td>
-				<td>&nbsp;&nbsp;&nbsp;&nbsp;
-					<button type="submit">Change Password</button>
-				</td>
-			</tr>
-		</table>
-	</div>
+				<tr></tr>
+				<tr></tr>
+				<tr>
+					<td align="left">New Password</td>
+					<td><input type="password" name="newpassword"></td>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+
+				<tr>
+					<td></td>
+				</tr>
+				<tr></tr>
+				<tr></tr>
+
+				<tr>
+					<td></td>
+					<td>
+						<button type="submit">Change Password</button>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</form>
 </body>
 </html>
