commit - register and change_Password changed - Vaikunth

--- a/WebContent/changepassword.html
+++ b/WebContent/changepassword.html
@@ -7,16 +7,22 @@
 <style>
 body {
 	background: url("Shopping-Background.jpg") ;
-	background-repeat: no-repeat center;
-	padding-top: 230px;
+/* 	background-repeat: no-repeat center;
+ */	padding-top: 150px;
 	text-align: center;
+	
+	
 }
+
 
 form {
 	display: inline-block;
 }
 </style>
 <body style="color:white ;font-family:Times New Roman;font-size:19px">
+<div >
+<img src = "JPRS-banner-icon.png" >
+</div>
 	<form method="post" action="UpdateRegistrationServlet">
 		Change Password
 		<div align="center">
