--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -6,6 +6,8 @@
 </head>
 <style>
 body {
+	background: url("Shopping-Background.jpg") ;
+
 	text-align: center;
 	padding-top: 130px;
 }
@@ -14,7 +16,8 @@ form {
 	display: inline-block;
 }
 </style>
-<body bgcolor="grey">
+<body style="color:white ;font-family:Times New Roman;font-size:19px">
+
 	<form method="post" action="AddRegisterationServlet">
 		<table>
 			<tbody>
