--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -68,8 +68,7 @@ form {
 				</tr>
 				<tr>
 					<td></td>
-					<td><button type="submit" style="width: 100px">Sign
-							Up</button> <br></td>
+					<td><button type="submit" style="width: 100px">Sign Up</button> <br></td>
 				</tr>
 
 			</tbody>
