--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -62,6 +62,9 @@ form {
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
 					<td></td>
 					<td><button type="submit" style="width: 100px">Login</button>
 						<br></td>
