--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -6,7 +6,7 @@
 </head>
 <style>
 body {
-	background: url("Shopping-Background.jpg") ;
+	background: url("wallpaper.png") ;
 
 	text-align: center;
 	padding-top: 130px;
