commit -login new user page redirect changed,AddCategoryServlet-jerin

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -53,7 +53,7 @@ form {
 					<td><input type="password" name="password" required></td>
 				</tr>
 				<tr>
-					<td><a href="onlineregister.html">New User</a></td>
+					<td><a href="register.html">New User</a></td>
 					<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="forgetpassword.html">forget password ?</a>
 					</td>
