commit -Overall Project-jerin

--- a/WebContent/changepassword.html
+++ b/WebContent/changepassword.html
@@ -20,7 +20,7 @@ form {
 <body
 	style="color: white; font-family: Times New Roman; font-size: 19px">
 	<div>
-		<img src="JPRS-banner-icon.png">
+		<img src="changepasswordicon.png">
 	</div>
 	<form method="post" action="UpdateRegistrationServlet">
 		Change Password
